<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris"
    tools:context=".registro_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/app_leyenda_registro"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/app_usuario"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/app_nombre"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/app_nacionalidad"
            android:inputType="textMultiLine"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/app_contrasena"
            android:inputType="textPassword"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/editTextTextPassword3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/app_contrasena_repetir"
            android:inputType="textPassword"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_redondeado_azul"
            android:text="@string/app_registrar"
            android:textColor="@drawable/txt_btn_solid_azul"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_aviso_politicas"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/btn_redondeado_fucsia"
            android:drawableEnd="@drawable/icono_atras_peq"
            android:onClick="regresar"
            android:paddingEnd="15dp"
            tools:visibility="visible" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>