<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/logoprincipal" />

        <EditText
            android:id="@+id/txt_correo_electronico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/app_usuario"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txt_contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/app_contrasena"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_ingresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_redondeado_azul"
            android:onClick="menu"
            android:text="@string/app_ingresar"
            android:textColor="@drawable/txt_btn_solid_azul" />

        <Button
            android:id="@+id/btn_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_delineado_azul"
            android:onClick="registrarse"
            android:text="@string/app_registrar"
            android:textColor="@drawable/txt_btn_delineado" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>